# robot_cortadora

./: .gitignore  CLAUDE.md  PRUEBA_ESP32_SENSORES.txt  PRUEBA_GIT.txt  README.md
.github/: CODEOWNERS
Datasheet/: Motor_bordeadora.txt  Motor_brushless.txt  Sabertooth2x25v2.txt
docs/: 00_estado_actual.md  01_bitacora_diaria.md  02_registro_acciones_raw.md  README.md  arquitectura.md  comandos.md
firmware/: README.md
firmware/esp32_motor/: README.md
firmware/esp32_motor/test_s3_motor/: CMakeLists.txt
firmware/esp32_motor/versions/: 2026_04_16_backup_active_microros.c  2026_04_16_test_mc33926.cpp  Codigo_motor1.0.cpp.bak  README.md
firmware/esp32_sensor/: README.md
firmware/esp32_sensor/versions/: 200426bumperUltrasonicUnicoTopic.c.bak  220426MainV5.0.c.bak  220426NoFunca1ultrasonico.c.bak  Nodo_MainV4.0.c.bak  README.md  bumpers_prueba.c.bak
ros2_ws/: README.md
ros2_ws/src/cortadora_brain/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/cortadora_brain/cortadora_brain/: bumper_decision_node.py
ros2_ws/src/cortadora_brain/versions/: bumper_decision_node.py
ros2_ws/src/cortadora_bringup/: README.md  package.xml  setup.cfg  setup.py
scripts/: README.md
scripts/common/: README.md
scripts/pc/: README.md  activate_motor_version.sh  build_motor.sh  build_sensor.sh  build_test_s3.sh  flash_motor.sh  flash_sensor.sh  flash_test_s3.sh  monitor_motor.sh  run_agent_serial.sh
snapshots/: README.md
snapshots/2026_04_pc_linux_integracion_estable/: README.md
tools/microros_agent_ws/: README.md
tools/microros_agent_ws/install/: setup.sh  (+1 more)
(+39 files in other folders)
