<?xml version="1.0"?>
<package format="3">
  <name>cortadora_brain</name>
  <version>0.0.1</version>
  <description>Nodo principal de toma de decisiones para la cortadora</description>

  <maintainer email="angel@example.com">Angel Alegre</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
