<?xml version="1.0"?>
<package format="3">
  <name>cortadora_bringup</name>
  <version>0.0.1</version>
  <description>Launch files y configuraciones de arranque de la cortadora</description>

  <maintainer email="angel@example.com">Angel Alegre</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
